[package]
name = "lddtree"
version = "0.5.1"
edition = "2024"
description = "Read the ELF dependency tree"
license = "MIT"
keywords = ["ldd", "elf"]
readme = "README.md"
repository = "https://github.com/messense/lddtree-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "3.0"
glob = "0.3"
goblin = "0.10"
memmap2 = "0.9"

[profile.release]
opt-level = 3
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
